// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestionnairesList component renders correct text and urls when is admin page is false 1`] = `
<div
  className="album text-muted"
>
  <div
    className="container"
  >
    <div
      className="row questionnaires"
    >
      <div
        className="card"
        key="1"
      >
        <Link
          to="/questionnaires/1"
        >
          <h4
            className="card-title"
          >
             
            Lord of the Rings
             Questionnaire
          </h4>
        </Link>
        <div
          className="questionnaires-list-buttons"
        >
          <Link
            className="btn btn-info btn-lg"
            to="/questionnaires/1"
          >
            Take Questionnaire
          </Link>
        </div>
      </div>
      <div
        className="card"
        key="2"
      >
        <Link
          to="/questionnaires/2"
        >
          <h4
            className="card-title"
          >
             
            Lord of the Flies
             Questionnaire
          </h4>
        </Link>
        <div
          className="questionnaires-list-buttons"
        >
          <Link
            className="btn btn-info btn-lg"
            to="/questionnaires/2"
          >
            Take Questionnaire
          </Link>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionnairesList component renders correct text and urls when is admin page is true 1`] = `
<div
  className="album text-muted"
>
  <div
    className="container"
  >
    <div
      className="row questionnaires"
    >
      <div
        className="card"
        key="1"
      >
        <Link
          to="/admin/questionnaires/1"
        >
          <h4
            className="card-title"
          >
             
            Lord of the Rings
             Questionnaire
          </h4>
        </Link>
        <div
          className="questionnaires-list-buttons"
        >
          <Link
            className="btn btn-info btn-lg"
            to="/admin/questionnaires/1"
          >
            View Responses
          </Link>
        </div>
      </div>
      <div
        className="card"
        key="2"
      >
        <Link
          to="/admin/questionnaires/2"
        >
          <h4
            className="card-title"
          >
             
            Lord of the Flies
             Questionnaire
          </h4>
        </Link>
        <div
          className="questionnaires-list-buttons"
        >
          <Link
            className="btn btn-info btn-lg"
            to="/admin/questionnaires/2"
          >
            View Responses
          </Link>
        </div>
      </div>
    </div>
  </div>
</div>
`;
